--- a/assets/frontend/css/common/main.css
+++ b/assets/frontend/css/common/main.css
@@ -58,16 +58,18 @@
 }
 
 /*===== PRIMARY HTML START =====*/
-
+:root {
+  --footer-bg: black;
+}
 html {
   height: 100%;
   width: 100%;
+  scrollbar-gutter: stable;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 body {
   min-width: 100%;
   min-height: 100%;
@@ -240,7 +242,7 @@ blockquote strong {
 .flex-container,
 .flex-row {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .flex-container:before,
@@ -248,10 +250,6 @@ blockquote strong {
 .flex-row:after,
 .flex-row:before {
   display: none;
-}
-
-.padding-section {
-  padding: 60px 0;
 }
 
 .content-middle {
@@ -262,10 +260,8 @@ blockquote strong {
 }
 
 main {
-  position: relative;
-  padding-top: 140px;
+  padding-top: 100px;
   background-color: #ffffff;
-  z-index: 1;
 }
 
 .overlay {
@@ -414,11 +410,14 @@ nav.quick-link-drop a:last-child {
 .logo-main {
   width: 300px;
   display: block;
-  padding: 10px 0;
+  /* padding: 10px 0; */
+  height: 70px;
 }
 
 .logo-main img {
   width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .main-nav {
@@ -436,11 +435,12 @@ nav.quick-link-drop a:last-child {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  padding: 12.5px 18px;
-  border-left: 1px solid rgb(157 189 151);
-  font-size: 16px;
+  padding: 12.5px 12px;
+  /* border-left: 1px solid rgb(157 189 151); */
+  font-size: 15px;
   font-family: "Montserrat-Medium";
   color: #000000;
+  white-space: nowrap;
 }
 
 .main-nav a:hover {
@@ -543,6 +543,9 @@ nav.quick-link-drop a:last-child {
   }
   header .flex-container {
     justify-content: center;
+    position: relative;
+    top: 0;
+    left: 0;
   }
   .header-top.active {
     z-index: 1;
@@ -607,12 +610,20 @@ nav.quick-link-drop a:last-child {
     -webkit-transform: translateY(-50px);
     transform: translateY(-50px);
   }
+  .header-bottom {
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
   header.fixed.up .header-bottom.active {
     -webkit-transform: translateY(0);
     transform: translateY(0);
   }
   #nav-toggler {
     display: block;
+    margin-right: 1rem !important;
   }
   .logo-main {
     width: 150px;
@@ -622,6 +633,14 @@ nav.quick-link-drop a:last-child {
     width: 100%;
     display: flex;
     flex-direction: column;
+    display: none;
+  }
+  .main-nav--open {
+    display: block;
+    position: absolute;
+    top: 6rem;
+    left: 0;
+    padding-right: 1rem;
   }
   .main-nav a {
     display: flex;
@@ -639,7 +658,7 @@ nav.quick-link-drop a:last-child {
     position: absolute;
     bottom: 0;
     right: 0;
-    background-color: #058100;
+    /* background-color: #058100; */
   }
   .main-nav li:last-child a {
     border: none;
@@ -711,10 +730,11 @@ nav.quick-link-drop a:last-child {
   font-size: 14px;
   color: #000000;
   font-family: "Montserrat-Medium";
+  text-wrap: wrap;
 }
 
 .mega-menu li:not(:last-child) a {
-  border-bottom: 1px solid #a7a7a7;
+  /* border-bottom: 1px solid #a7a7a7; */
 }
 
 .mega-menu .has-child > a::before,
@@ -906,6 +926,7 @@ nav.quick-link-drop a:last-child {
     max-height: 1000px;
     margin-bottom: 20px;
     overflow: visible;
+    opacity: 1;
   }
   .mega-menu .has-child.active .mega-sub li::before {
     width: 7px;
@@ -927,9 +948,9 @@ nav.quick-link-drop a:last-child {
 footer {
   width: 100%;
   padding: 60px 0 0;
-  background: url(../../../../images/themImages/locationtracker.jpg) no-repeat
-    #333;
-  z-index: -1;
+  background: black;
+  /* z-index: -1; */
+  color: white;
 }
 
 .footer-logo {
@@ -1021,8 +1042,6 @@ footer address h4 {
 .footer-bottom {
   position: relative;
   text-align: center;
-  margin: 40px 0 0;
-  padding: 10px 0;
   color: #fff;
   font-size: 13px;
   background-color: #222429;
@@ -1059,11 +1078,11 @@ footer address h4 {
 }
 
 @media (min-width: 1024px) {
-  footer {
+  /* footer {
     position: fixed;
     bottom: 0;
     left: 0;
-  }
+  } */
   .newletter-social-wrap {
     margin: 0 0 50px;
   }
@@ -1495,6 +1514,9 @@ footer address h4 {
 @media (max-width: 520px) {
   .forex-pop {
     width: calc(100% - 30px);
+  }
+  .logo-main {
+    width: 170px;
   }
 }
 /*=============== End Forex POP ===============*/
@@ -2274,4 +2296,12 @@ label .required {
 }
 .rightSidebar a:hover {
   color: #00f7d5;
+}
+@media (max-width: 1098px) {
+  .flex-container {
+    justify-content: center;
+  }
+}
+#hero-banner .ms-bullet {
+  border-radius: 10%;
 }
